Support java 9+