@@ -1,47 +1,7 @@
-<p align="center">
-  <img src="https://i.imgur.com/Fog5fDB.png">
-</p>
+# FastAsyncWorldEdit - Legacy
+This is a modified version of FAWE legacy to run in newer JVM versions.
 
----
-
-# This is the legacy version of FAWE (1.8 - 1.12 and other platforms). It is no longer maintained. The focus lays on the newer versions of minecraft. You can find the new version of FAWE [here](https://github.com/IntellectualSites/FastAsyncWorldEdit).
-
-FAWE is a fork of WorldEdit that has huge speed and memory improvements and considerably more features
-
-It is available for Bukkit, Forge, Sponge and Nukkit.
-
-## Links 
-
-* [Spigot Page](https://www.spigotmc.org/threads/fast-async-worldedit.100104/)
-* [Discord](https://discord.gg/ngZCzbU)
-* [Wiki](https://github.com/boy0001/FastAsyncWorldedit/wiki)
-
-## Downloads
-### <1.12.2
-* [Download](https://ci.athion.net/job/FastAsyncWorldEdit-legacy/)
-* [Jenkins](https://ci.athion.net/job/FastAsyncWorldEdit/)
-* [JavaDoc](https://ci.athion.net/job/FastAsyncWorldEdit/javadoc/)
-
-### 1.13+
-* [Download](https://intellectualsites.github.io/download/fawe.html)
-* [Jenkins](https://ci.athion.net/job/FastAsyncWorldEdit-1.13/)
-* [JavaDoc](https://ci.athion.net/job/FastAsyncWorldEdit-1.13/javadoc/)
-* [Repository](https://github.com/IntellectualSites/FastAsyncWorldEdit-1.13)
-
-## Developer Resources
-* [Maven Repo](http://ci.athion.net/job/FastAsyncWorldEdit/ws/mvn/)
-* [API Documentation](https://github.com/boy0001/FastAsyncWorldedit/wiki/API)
-
-## Building
-FAWE uses gradle to build
-
+You have to add this to your JVM arguments to make sure FAWE can modify non final fields 
 ```
-$ gradlew setupDecompWorkspace
-$ gradlew build
+--add-opens java.base/java.lang.invoke=ALL-UNNAMED
 ```
-
-## Contributing
-Have an idea for an optimization, or a cool feature?
- - I'll accept most PR's
- - Let me know what you've tested / what may need further testing
- - If you need any help, create a ticket or discuss on [Discord](https://discord.gg/ngZCzbU)
